style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&family=Source+Sans+Pro:wght@600;700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap');

body{
    margin: 0px;
    font-family: 'Source Sans Pro', sans-serif;
}
#header{
    display: flex;
    justify-content: space-between;
    padding: 19px 30px 0;
    align-items: center;
    margin-bottom: 19px;
}
.nava{
    text-decoration: none;
    color: rgba(51, 51, 51, 1);
    font-size: 16px;
    line-height: 24px;
}
li{
    list-style-type: none;
}
.nava:hover{
    font-size: 17px;
    color: rgb(255, 255, 255);
    border-radius: 15px;
    background-color: rgba(200, 109, 215, 1);
    padding: 0 20px;
}
#header div:first-of-type a{
    text-decoration: none;
    font-size: 40px;
    line-height: 48px;
    font-family: 'Poppins', sans-serif;
    color: rgba(51, 51, 51, 1);
    margin-bottom: 19px;
}

#header div:last-of-type{
    display: flex;
}
#shape{
    width: 24px;
    height: 23.83px;
}
#shape:hover{
    opacity: 50%;
    width: 25px;
    height: 24.83px;
}
#burger{
    width: 24px;
    height: 20px;
    margin-left: 32.19px;
    padding-bottom: 3px;
}
#burger:hover{
    opacity: 50%;
    width: 25px;
    height: 21px;
}

#main{
    background-image: url(./picture/main/Object.png);
    background-repeat: no-repeat;
    background-size: cover;
    background-position: 0 -50px;
    height: 497px;
    color: white;
    padding: 173px 11% 0px;
}
.main{
    font-size: 20px;
    line-height: 24px;
    font-family: 'Poppins', sans-serif;
    margin-bottom: 23px;
    padding: 0px;
}
h1{
    font-size: calc(1.475rem + 2.7vw);
    line-height: 72px;
    font-family: 'Poppins', sans-serif;
    margin: 0px;
}
#main p{
    font-size: 16px;
    line-height: 24px;
    font-weight: 600;
    max-width: 750px;
    margin-bottom: 46px;
}
#main div:last-of-type{
    display: flex;
}
#main div:last-of-type li a.main_btn{
    font-weight: 700;
    font-size: 16px;
    line-height: 24px;
    text-decoration: none;
    color: white;
    margin-right: 30px;
    border: 1px white solid;
    border-radius: 25px;
    padding: 12px 47.5px;
    transition: 0.3s;
}
#main div:last-of-type li a.main_btn:hover{
    background-color: rgba(255, 195, 0, 1);
    border: 1px rgba(255, 195, 0, 1) solid;
}


.cards_bottom{
    display: flex;
    width: 78%;
    margin: 0 auto;
}
.first_cards{
    padding: 61px 0 61px;
}
.cards{
    position: relative;
    flex-basis: calc(100% / 3);
    overflow: hidden;
    border-radius: 5px;
    margin: 15px;
    box-shadow: 16px 16px 48px 0 rgba(0, 0, 0, 0.0995);
}
.cards>div{
    margin-top: 32px;
    padding-left: 32px;
    position: relative;
}
.cards img{
    background-size: 100%;
    width: 100%;
}
.plus{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 48px;
    height: 48px;
    border: 1px solid #C86DD7;
    box-sizing: border-box;
    border-radius: 24px;
    position: absolute;
    right: 8% ;
    bottom: 4%;
    color: #C86DD7;
    font-size: 35px;
    transition: 0.3s;
    margin: 15px;
    z-index: 100;
}
.plus:hover{
    color: #ffffff;
    background-color:#C86DD7;
}
.cards_header{
    padding: 0 11%;
    margin-left: auto;
    margin-right: auto;
}

.cards_header div{
    font-family: 'Poppins', sans-serif;
    font-size: 16px;
    line-height: 24px;
    margin-bottom: 18px;
    color:rgba(51, 51, 51, 1);
}
h2{
    font-family: 'Poppins', sans-serif;
    font-size: calc(1.475rem + 2.7vw);
    line-height: 64px;
    margin: 0 0 57px;
    color:rgba(51, 51, 51, 1);
}
.cards p{
    font-size: 12px;
    line-height: 24px;
    margin: 0px;
    color:rgba(51, 51, 51, 1);
}
#hfive{
    max-width: 70%;
}
h5{
    font-size: 24px;
    line-height: 32px;
    max-width: 50%; 
    margin: 0 0 43px;
    color:rgba(51, 51, 51, 1);
}
#laptop{
    padding: 159px 6.5% 160px;
    background-image: url(./picture/laptop/BG.png);
    background-repeat: no-repeat;
    background-size: cover;
    height: 368px;
}
#laptop>div img {
    float: left;
    width: 700px;
}
.laptop_description{
    padding-top: 6%;
    display: block;
}
.laptop_description h2{
    font-size: calc(16px + 2.7vw);
    line-height: 64px;
    font-family: 'Poppins', sans-serif;
    margin: 0;
}
.laptop_description P{
    color: rgba(51, 51, 51, 1);
    font-size: 16px;
    line-height: 24px;
    margin: 23px 0 32px;
}
.blue_btn{
    text-decoration: none;
    font-size: 16px;
    line-height: 24px;
    color: white;
    background-color: #C86DD7;
    border: 1px #C86DD7 solid;
    border-radius: 25px;
    padding: 11px 57px;
    transition: 0.5s;
}
.blue_btn:hover{
    border: 1px #C86DD7 solid;
    background-color: rgba(255, 255, 255, 0);
    color: #C86DD7;
}
.clear-float{
    clear: both;
}

.blocks_description{
    display: flex;
    justify-content: space-between;
    padding: 55px 135px;
}
.blocks_description h2{
    margin: 0;
    font-size: 56px;
    line-height: 64px;
}
.blocks_bottom{
    display: flex;
    flex-wrap: wrap;
    position: relative;
    height: 550px;
    background-color: rgb(89, 151, 65);
}
.blocks_bottom .plus{
    display: flex;
    justify-content: center;
    align-items: center;
    width: 48px;
    height: 48px;
    border: 1px solid #ffffff;
    box-sizing: border-box;
    background-color: rgba(255, 255, 255, 0);
    border-radius: 24px;
    position: absolute;
    left: 32%;
    bottom: 5%;
    color: #ffffff;
    font-size: 35px;
    transition: 0.3s;
    margin: 15px;
    z-index: 100;
    text-decoration: none;
}
.blocks_bottom .plus:hover{
    color: #C86DD7;
    background-color: rgb(255, 255, 255);
}
.blocks_text{
    position: absolute;
    max-width: 30%;
    left: 32px;
    bottom: 32px;
    z-index: 10;
}
.blocks_text h5{
    margin: 0;
    font-size: 24px;
    line-height: 32px;
    font-family: 'Poppins', sans-serif;
    color: white;
}
.blocks_text p{
    font-size: 16px;
    line-height: 24px;
    color: white;
    font-family: 'Nanum Gothic', sans-serif;
}
#glass{
    width: 550px;
    position: absolute;
    z-index: 5;
}
#frame{
    width: 275px;
    position: absolute;
    top: 0;
    left:550px
}
#icecream{
    width: 275px;
    position: absolute;
    bottom: 0;
    left:550px
}
#head{
    width: 340px;
    position: absolute;
    top: 0;
    right: 184px;
}
#bilding{
    width: 184px;
    position: absolute;
    right: 0;
    top: 0;
    z-index: 5;
}
#hren{
    width: 184px;
    position: absolute;
    right: 0;
    bottom: 210px;
}
#dron{
    width: 524px;
    height: 210px;
    position: absolute;
    right: 0;
    bottom: 0;
}


@media(max-width:700px){
    
    #main{
        text-align: center;
        height: 688px;
        background-color: rgba(48, 35, 174, 1);
        background-position: 0 0px;
    }
    
    #main div:last-of-type{
        margin: 0px;
        height: 200px;
        display: flex;
        flex-direction: column;
        margin-right: auto;
        margin-left: auto;
    }
    #main div:last-of-type li{
        margin-bottom: 50px;
    }
    #main div:last-of-type li a.main_btn{
        margin: 0px;
    }
    .first_cards{
        text-align: center;
        
    }
    .cards_bottom{
        flex-direction: column;
    }
    .cards{
        text-align: start;
    }
    #laptop>div img{
        position: relative;
        left: -300px
    }
    #laptop>div{
        text-align: center;
    }
}

